# game_sdl-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  app_icon.rc  setup_wizard_script.iss
game/: options.txt  package.ps1
lib/: animation.h  config.h  file_utils.h  logger.h  timer.h
source/: config.cpp  file_utils.cpp  logger.cpp  main.cpp
